trying to fix the profile picture on mobile

--- a/portfolio/static/css/styles.css
+++ b/portfolio/static/css/styles.css
@@ -229,9 +229,12 @@ body {
 
 .profile-picture {
     display: flex;
-    width: 150px;
-    height: 150px;
-    justify-content: center;
+    flex-direction: column;
+    width: 10rem;
+    height: 10rem;
+    justify-content: right;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .u-bare-link{
